// Original file: src/proto/proto/statistic.proto


export interface Statistic {
  'totalCampaigns'?: (number);
  'totalInvestors'?: (number);
  'totalEnterprises'?: (number);
  'totalPartners'?: (number);
}

export interface Statistic__Output {
  'totalCampaigns': (number);
  'totalInvestors': (number);
  'totalEnterprises': (number);
  'totalPartners': (number);
}
